devrooms: add two more CfPs

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -60,8 +60,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002743.html
         deadline: 2018-11-25
     'Retrocomputing ':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002782.html
+        deadline: 2018-11-30
     'Software Defined Networking':
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002758.html
         deadline: 2018-11-25
@@ -95,8 +95,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002732.html
         deadline: 2018-12-07
     'Free Tools and Editors':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002783.html
+        deadline: 2018-12-07
     'Geospatial':
         ann: 
         deadline: 
