--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -128,8 +128,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002781.html
         deadline: 2018-12-01
     'Real Time Communications':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002784.html
+        deadline: 2018-12-02
     'Rust':
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002740.html
         deadline: 2018-11-25
