devrooms: add CfP for Distributions

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -89,8 +89,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002739.html
         deadline: 2018-12-01
     'Distributions':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002786.html
+        deadline: 2018-12-02
     'Free Software Radio':
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002732.html
         deadline: 2018-12-07
