devrooms: add CfP for Containers

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -83,8 +83,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002776.html
         deadline: 2018-11-23
     'Containers':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002790.html
+        deadline: 2018-12-14
     'DNS':
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002739.html
         deadline: 2018-12-01
