devrooms: add graph cfp

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -24,8 +24,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002767.html
         deadline: 2018-11-30
     'Graph Processing':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002800.html
+        deadline: 2018-12-02
     'Graphics':
         ann: 
         deadline: 
