Add graphics cfp and deadline

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -27,8 +27,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002800.html
         deadline: 2018-12-02
     'Graphics':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002806.html
+        deadline: 2018-12-14
     'Infra Management':
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002744.html
         deadline: 2018-12-01
