Add quantum computing devroom cfp and deadline

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -54,8 +54,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002768.html
         deadline: 2018-11-25
     'Quantum Computing':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002811.html
+        deadline: 2018-12-11
     'RISC-V':
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002743.html
         deadline: 2018-11-25
