--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -49,6 +49,14 @@ events:
         registration: None
         website: https://2019.copyleftconf.org/
         contact: copyleftconf@sfconservancy.org
+    'DebConf Video team sprint':
+        location: Diegem
+        start: 2019-02-04
+        end: 2019-02-08
+        cost: Free
+        registration: None
+        website: https://wiki.debian.org/Sprints/2018/DebConf%20Video%20team%20sprint%20%40%20FOSDEM%202019
+        contact: debconf-video@lists.debian.org
     'The First Annual International Copyleft Conference':
         location: Brussels, BE
         start: 2019-02-04
