--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -65,6 +65,14 @@ events:
         registration: None
         website: https://wiki.freebsd.org/Devsummit/201902
         contact: bcr@FreeBSD.org
+    'pre-FOSDEM MySQL Day':
+        location: Brussels
+        start: 2019-02-01
+        end: 2019-02-01
+        cost: Free
+        registration: Required
+        website: https://mysqlday2019.eventbrite.com/
+        contact: frederic.descamps@oracle.com
     'CfgMgmtCamp':
         location: Ghent, BE
         start: 2019-02-04
