--- a/config.yaml
+++ b/config.yaml
@@ -170,13 +170,13 @@ pentabarf:
     height: 200
 
 keysigning:
-  submission_deadline: 2019-01-24
+  submission_deadline: 2019-01-23
   homework_due: 2019-04-30
   # Change these when the submission window opens/closes.
-  submission_notyet: true
+  submission_notyet: false
   submission_closed: false
   # Change this when the list of keys is published.
-  list_published: true
+  list_published: false
 
 deadlines:
   lightningtalks:
