Archive the 2019 website

--- a/config.yaml
+++ b/config.yaml
@@ -50,8 +50,8 @@ output_dir: output
 # Colors to use for events and tracks in various grids.
 # These are a combination of two sets of colors from colorlovers.com,
 # namely the following:
-# http://www.colourlovers.com/palette/2510621/NARANJA
-# (and the other one, I forgot...):
+# https://www.colourlovers.com/palette/2510621/NARANJA
+# https://www.colourlovers.com/palette/92095/Giant_Goldfish
 colors: '69D2E7 A7DBD8 E0E4CC F38630 FA6900 EA813D E7A350 FCC777 C3DBB9 A79474'
 
 # A list of index filenames, i.e. names of files that will be served by a web
@@ -136,6 +136,10 @@ watcher:
   notify_on_compilation_failure: true
 
 deploy:
+  archive:
+    kind: rsync
+    dst:  "www-archive@www-public0.fosdem.org:/var/www/archive.fosdem.org/public"
+    options: [ '-glPrtvzPO', '--exclude=searcher', '--exclude=404.html', '--exclude=favicon.ico' ]
   public:
     kind: rsync
     dst:  "www-live@www-public0.fosdem.org:/var/www/fosdem.org/public"
@@ -148,7 +152,6 @@ deploy:
 pentabarf:
   conference_id: FOSDEM19
   username: nanoc
-  #password: 
   database: pentabarf
   host:     pgsql.fosdem.org
   port:     5432
